# circus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.django  README.md  docker-compose.yml  pyproject.toml
circus/: config.py  exceptions.py
circus/automation/: actions.py  base.py  u2driver.py
circus/cli/: main.py
circus/device/: discovery.py  models.py  pool.py  screen.py
circus/llm/: providers.py
circus/persona/: artist_research.py  enrichment.py  generator.py  models.py  storage.py  templates.py
circus/research/: apis.py  youtube.py
circus/tasks/: executor.py  models.py  results.py  runner.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/accounts/: page.tsx
frontend/components/: AppShell.tsx  ProjectSwitcher.tsx
frontend/lib/: api.ts  campaign-context.tsx  project-context.tsx  types.ts  workflow-types.ts  workflow-utils.ts
scripts/: INSTAGRAM_SCRAPER_EVALUATION.md  test_ig_scrapers.py
tasks/: example_scroll_feed.yaml  harvest_instagram_commenters.yaml  harvest_instagram_followers.yaml  instagram_login.yaml  open_instagram.yaml  scrape_instagram_comments.yaml  warm_explore.yaml  warm_like_posts.yaml  warm_scroll_feed.yaml  warm_search_interest.yaml  warm_watch_stories.yaml
tests/: test_device_pool.py  test_executor.py  test_persona.py  test_results.py  test_smart_tasks.py  test_task_runner.py
web/: manage.py
web/api/: apps.py  models.py  scheduler.py  serializers.py  services.py  sync.py  tests.py  urls.py  views.py
web/circus_web/: asgi.py  settings.py  wsgi.py
(+82 files in other folders)
