[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circus"
version = "0.1.0"
description = "Agentic phone farm system"
requires-python = ">=3.11"
dependencies = [
    "uiautomator2>=3.0",
    "adbutils>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "faker>=20.0",
    "apscheduler>=3.10,<4",
]

[project.scripts]
circus = "circus.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
