[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circus"
version = "0.1.0"
description = "Agentic phone farm system"
requires-python = ">=3.11"
dependencies = [
    "uiautomator2>=3.0",
    "adbutils>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "faker>=20.0",
    "apscheduler>=3.10,<4",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "av>=13.0",
    "Pillow>=10.0",
]

[project.scripts]
circus = "circus.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
